--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+  .link{
+    @apply cursor-pointer font-semibold text-sm text-white hover:underline;
+  }
+  .brand-logo{
+    @apply text-white;
+  }
+}
